--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.Rnw
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.Rnw
@@ -6,21 +6,106 @@
 \newcommand{\eg}{{\em e.g., }}
 \SweaveOpts{concordance=TRUE}
 
+\section{Landscape}
+
+MBITES uses a landscape structure called \verb1MICRO1 that is a set of {\em sites}. Each site has a type that determines the types of resting spots that are present (described in greater detail below in Options : Resting Hazards). There are four types of functions that can occur at each site:
+%
+\begin{itemize}
+\item[f] :: haunts or blood feeding sites where feeding occurs
+\item[l] :: habitats, short for aquatic habitats where egg laying occurs
+\item[s] :: sugar, or sites where there are sugar sources
+\item[m] :: mating sites
+\end{itemize}
+%
+Other properties of a site include a set of queues that coordinate information sharing from one \verb1COMPONENT1 to another. 
+
+\subsection{Time at Risk}
+
+
+\subsection{Egg Laying}
+
+\subsection{Emergence}
+
+
 \section{Mosquito Bouts}
 
-In computing the outcome of a flight bout, variables track the  mosquito's present and future state (\verb1state1, and \verb1stateNew1); event times (\verb1tNow1, and \verb1tNext1) | the moment when it started the bout, and location (\verb1locNow1, and \verb1locNext1). Before starting a new flight bout, \verb1tNext1 is was checked to be sure other elements of the simulation it depends on have already been correctly set. Upon entering the bout, we update the mosquitoes time, state, and location:
+A mosquito bout tracks a mosquito from its launch to initiate one bout up to the point when it launches itself to initiate the next bout. Conceptually, the structure of a bout is:  {\bf Launch} - {\bf Try} - {\bf Land} - {\bf Rest}. The {\bf Try} part of the bout is found in code \verb1boutX1 where \verb1X1 is one of the following: 
+\begin{itemize}
+\item[F] :: A search to find a place where blood feeding can occur
+\item[B] :: An attempt to blood feed on a host that is present
+\item[R] :: The post-prandial resting bout
+\item[L] :: A search to find a place where egg laying can occur
+\item[O] :: An attempt to lay eggs
+\item[M] :: Mating, which could include a search flight 
+\item[S] :: Sugar feeding, which could include a search flight 
+\end{itemize}
+%
+After the bout, a mosquito lands at a particular kind of place, determined by the function \verb1restingSpot()1. The mosquito's energetic state is then updated, with \verb1sugarEnergetics()1.
+
+Mortality can occur as a result of flight stress or from one of the many hazards during landing. At the end, survival is computed by their associated functions: \verb1surviveResting()1 and \verb1surviveFlight()1.
+
+Finally, every mosquito event is logged through \verb1historyTrack()1. 
+
+\paragraph{Implementation Notes}
+
+All bouts are implemented within a generic bout framework, in the function \verb1mbites_oneBout()1.
+
+In computing the outcome of a flight bout, variables track the   event times (\verb1tNow1, and \verb1tNext1) -- the moment when it started the bout; the mosquito's location among the point sets (\verb1locNow1, and \verb1locNext1); and the mosquito's present and future state (\verb1state1, and \verb1stateNew1). Before starting a new flight bout, \verb1tNext1 has been checked to be sure other dependent elements of the simulation have been correctly set. 
+Upon entering the bout, the mosquitoes time, state, and location are updated:
 \begin{itemize}
 \item \verb1tNow = tNext1
 \item \verb1tNext = timing()1
-\item \verb1state = stateNew1
 \item \verb1locNow = locNext1
 \item \verb1locNext = moveMe()1
+\item \verb1state = stateNew1
 \end{itemize}
-All calculations within a bout use the time, state and location at the present: \verb1tNow1, \verb1state1, and \verb1locNow1. 
+The \verb1state1 ($=$\verb1X1) determines which kind of bout occurs; \verb1boutX1 is run, setting \verb1stateNew1. 
 
-\paragraph{Implementation}
+To avoid errors caused by updating \verb1state1 at the wrong time, all calculations within a bout use the {\em present} time, location, and state: \verb1tNow1, \verb1state1, and \verb1locNow1. 
 
-All bouts are implemented within a generic bout framework, in the function \verb1mbites_oneBout()1.
+To avoid resurrecting a dead mosquito or resuscitating an estivating mosquito, any code that could change a mosquito's behavioral state is run only if the function \verb1isActive()1 returns \verb1TRUE1. 
+
+
+
+
+\paragraph{R-Code}
+<<>>=
+mbites_oneBout <- function(){
+
+  # update time and state
+  private$tNow = private$tNext # update time
+  private$state = private$stateNew # update current state
+  self$timing() # update tNext
+
+  # movement
+  self$moveMe()
+
+  # bout
+  switch(private$state,
+    F = {self$boutF()},
+    B = {self$boutB()},
+    R = {self$boutR()},
+    L = {self$boutL()},
+    O = {self$boutO()},
+    M = {self$boutM()},
+    S = {self$boutS()},
+    {stop(cat("illegal behavioral state: ",private$state,"\n",sep=""))}
+  )
+
+  # landing spot
+  self$restingSpot()
+
+  # energetics
+  self$sugarEnergetics()  # MBITES-Generic-Energetics.R
+
+  # survival
+  self$surviveResting()     # MBITES-Generic-Survival.R
+  self$surviveFlight()      # MBITES-Generic-Survival.R
+
+  # log history
+  private$history$historyTrack(privateEnv = private, alive = self$isAlive())
+}
+@
 
 
 \subsection{Blood Feeding Search Bout [F]}
@@ -43,6 +128,8 @@ it always ends at a {\em feeding site} or {\em haunt}:
 The outcome of a search bout is either mosquito death, a new
 (possibly the same) location and behavioral state, or a
 frustrated search attempt without a change of behavioral state.
+
+The function ${\cal K}_F$ is implemented by \verb1rMove()1, described in the options below. 
 
 \paragraph{Implementation}
 
@@ -76,6 +163,8 @@ launch, \verb1bfsb.rs1. If a mosquito dies, its state is set to
 %
 \end{itemize}
 
+\paragraph{Transition Probabilities}
+
 The mosquito's ending state is:
 
 \begin{itemize}
@@ -85,6 +174,20 @@ The mosquito's ending state is:
 (1-$\verb1bfrs.f1$)(1-$\verb1bfsb.s1$))$.
 \item[{\bf B}] with probability $P_{FB} = 1-P_{FF}$.
 \end{itemize}
+
+\paragraph{R-Code}
+
+
+<<>>=
+mbites_boutF <- function(){
+  if(private$lspot != "l" & runif(1) < 
+     private$FemalePopPointer$get_MBITES_PAR("F_succeed")){
+    private$stateNew = "B"
+  } else {
+    private$stateNew = "F"
+  }
+}
+@
 
 \subsection{Blood Feeding Attempt Bout [B]}
 
@@ -310,14 +413,48 @@ feeding search bout at some point in the future.
 \section{Options}
 
 
+\subsection{Mosquito Dispersal}
+
+Mosquito dispersal occurs as the result of a search bout, called by the function \verb1rMove()1. 
+
+\subsubsection{Kernels}
+
+%\subsubsection{Kernels}
+
+
 \subsection{Surviving the Flight}
+
 
 This discusses implementation and options for \verb1surviveFlight()1. 
 
 \subsection{Resting Hazards}
 
-This discusses implementation and options for \verb1surviveResting()1. 
+This discusses implementation and options for \verb1surviveResting()1. One reason for determining where a host rests is for purposes of simulating various modes of vector control or entomological surveillance, including IRS, housing improvements, area repellants, eave tubes, or window traps.
 
+\subsubsection{A Simple Site}
+
+A simple type is given an index 
+
+
+\paragraph{R Code}
+
+<<>>=
+mbites_restingSpot <- function(){
+  if(self$isActive()){
+    if(self$searchFail()){
+      private$lspot = "l"
+    } else {
+      oldSpot = private$lspot
+      private$lspot = self$newSpot() # choose new lspot
+      if(oldSpot != "i" & private$lspot == "i"){
+        self$enterHouse() # enterHouse
+      }
+    }
+  }
+}
+@
+
+\subsection{The Blood Meal}
 
 \subsection{Senescence}
 
