--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
@@ -18,6 +18,9 @@ MBITES uses a landscape structure called \verb1MICRO1 that is a set of {\em site
 \item[m] :: mating sites
 \end{itemize}
 %
+There are also other properties of each site. Each site has a pair of numbers that determine its location $(x,y)$. Each type of function ($*$) has a search weight associated with it for each species: $\omega_{i, *}$. 
+
+
 Other properties of a site include a set of queues that coordinate information sharing from one \verb1COMPONENT1 to another. 
 
 \subsection{Time at Risk}
