--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
@@ -7,6 +7,8 @@
 \newcommand{\eg}{{\em e.g., }}
 \input{MBITES-Supplement-concordance}
 
+The following sections describe the Landscape, the Bouts, and the Options for MBITES.  Each section begins with a brief summary or heuristic followed by implementation notes, relevant details, and finally a bit of R code. 
+
 \section{Landscape}
 
 MBITES uses a landscape structure called \verb1MICRO1 that is a set of {\em sites}. Each site has a type that determines the types of resting spots that are present (described in greater detail below in Options : Resting Hazards). There are four types of functions that can occur at each site:
