--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
@@ -1,32 +1,54 @@
 \documentclass{article}
 \usepackage{mathtools}
 \renewcommand{\baselinestretch}{1.2} 
+\newcommand{\eg}{{\em e.g., }}
+
 
 \usepackage{Sweave}
 \begin{document}
-\newcommand{\eg}{{\em e.g., }}
+
+
+
+%\newcommand{\mbites}{{\cal MBITES}}
+
 \input{MBITES-Supplement-concordance}
 
-The following sections describe the Landscape, the Bouts, and the Options for MBITES.  Each section begins with a brief summary or heuristic followed by implementation notes, relevant details, and finally a bit of R code. 
+\paragraph{Introduction}
+
+The following sections describe the Landscape, the Bouts, and the Options for MBITES, which is a part of MASH.  Each section begins with a brief summary or heuristic followed by implementation notes, relevant details, and finally a bit of R code. MBITES has adopted a vocabulary for discussing models: 
+\begin{itemize}
+\item A \verb1COMPONENT1 is a fundamental part of MASH that interacts with other components.
+\item A \verb1Module1
+\end{itemize}
 
 \section{Landscape}
 
-MBITES uses a landscape structure called \verb1MICRO1 that is a set of {\em sites}. Each site has a type that determines the types of resting spots that are present (described in greater detail below in Options : Resting Hazards). There are four types of functions that can occur at each site:
+MBITES uses a landscape structure called \verb1MICRO1.  We think of a \verb1MICRO1 landscape as being comprised of different point sets on which mosquito activities occur: 
 %
 \begin{itemize}
 \item[f] :: haunts or blood feeding sites where feeding occurs
 \item[l] :: habitats, short for aquatic habitats where egg laying occurs
-\item[s] :: sugar, or sites where there are sugar sources
+\item[s] :: sugar, or sites where sugar feeding occurs
 \item[m] :: mating sites
 \end{itemize}
 %
+In MBITES, blood feeding is an event that occurs only at a blood feeding site, which typically include all the houses and other dwellings where people live. Another set of points describes where humans go to seek care:
+%
+\begin{itemize}
+\item[c] :: clinics or community health workers
+\end{itemize}
+%
+While this is the way we think about landscapes, there is in fact one master point set where {\em any} events happen, and each unique point is called a {\em site}. A set of boolean switch describes the kinds of events (\eg blood feeding, egg laying, sugar feeding, mating, or care seeking) occurring there.  
+
+Each site is determined by a location in space ($x,y$), and it has a {\em site type}, which determines how mosquitoes rest (\eg, around a homestead; \verb1restingSpot()1 is described in Options : Resting Hazards). 
+
 There are also other properties of each site. Each site has a pair of numbers that determine its location $(x,y)$. Each type of function ($*$) has a search weight associated with it for each species: $\omega_{i, *}$. 
 
+The main point of a landscape is to provide a template upon which different components of the model can interact. Humans and mosquitoes interact mainly through blood feeding, but for this to occur, there must be a way for humans and mosquitoes to meet up on the landscape.  The structures that allow for components to interact are called queues. 
 
 Other properties of a site include a set of queues that coordinate information sharing from one \verb1COMPONENT1 to another. 
 
 \subsection{Time at Risk}
-
 
 \subsection{Egg Laying}
 
