--- a/MASH-dev/DavidSmith/MBITESde-Supplement/MBITESde-Supplement.tex
+++ b/MASH-dev/DavidSmith/MBITESde-Supplement/MBITESde-Supplement.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage{mathtools}
-\renewcommand{\baselinestretch}{1.2} 
+\renewcommand{\baselinestretch}{1.15} 
 \usepackage{Sweave}
 \begin{document}
 \input{MBITESde-Supplement-concordance}
@@ -11,16 +11,17 @@
 \section{Supplementary Methods: MBITES-de}
 
 Let the behavioral state variable name from MBITES denote the expected number of mosquitoes of a given chronological age ($a$), that are in each behavioral state. Similarly, let the waiting times to events be modeled as a rate that is dependent on the behavioral state ($x$), age, and time ($t$): $\gamma_x(a,t)$. The proportion of mosquitoes that transition from state $x$ to state $y$ at the end of a bout is denoted $P_{xy}$. Death rates can be age dependent (\ie due to senescence), which affects the proportions transitioning to other states, so we write $P_{xy}(a)$. To deal with the event-driven nature of these bouts and the possibility some bouts may be repeated many times before transitioning to another state, we index mosquitoes by the $i^{th}$ attempt to repeat the same event as a way of computing waiting times properly; for example, a mosquito repeating a blood feeding attempt bout transitions from $B_n(a)$ to $B_{n+1}(a)$. Finally, we let $\Lambda(t)$ represent the rate of emergence of adult female mosquitoes. The following system of coupled PDEs is homologous to MBITES: 
+
 \begin{equation}\begin{array}{rl}
-F_1(0,t)=& \Lambda(t) \\ 
+F_1(0,t)=& \Lambda(t) \\ &\\
 %
 \frac{\partial F_1(a,t)}{\partial t} + \frac{\partial F_1(a,t)}{\partial a} =& 
 \gamma_O(a,t) P_{OF}(a) \sum_i O_i(a,t) 
 + \gamma_B(a,t) P_{BF}(a)  \sum_i B_i(a,t) \\&
 + \gamma_R(a,t) P_{RF}(a) R(a,t) 
-- \gamma_F(a,t) F_1(a,t) \\ 
+- \gamma_F(a,t) F_1(a,t) \\ &\\
 %
-\frac{\partial F_i(a,t)}{\partial t} + \frac{\partial F_i(a,t)}{\partial a} =& \gamma_F(a,t) P_{FF}(a) F_{i-1} (a,t) - \gamma_F(a,t) F_i(a,t) \\ 
+\frac{\partial F_i(a,t)}{\partial t} + \frac{\partial F_i(a,t)}{\partial a} =& \gamma_F(a,t) P_{FF}(a) F_{i-1} (a,t) - \gamma_F(a,t) F_i(a,t) \\ &\\
 %
 %
 \frac{\partial B_1(a,t)}{\partial t} + \frac{\partial B_1(a,t)}{\partial a} =&  
@@ -28,75 +29,68 @@ F_1(0,t)=& \Lambda(t) \\
 + \gamma_F(a,t) P_{FB}(a) \sum_i F_i(a,t)\\& 
 + \gamma_R(a,t) P_{RB}(a) R(a,t)
 \\&
-- \gamma_B(a,t) B_1(a,t) \\ 
+- \gamma_B(a,t) B_1(a,t) \\ &\\
 %
 \frac{\partial B_i(a,t)}{\partial t} + \frac{\partial B_i(a,t)}{\partial a} =& \gamma_B(a,t) P_{BB}(a) B_{i-1}(a,t) -
 \gamma_B(a,t) B_i(a,t) 
-\\
+\\&\\
 %
-\frac{\partial R(a,t)}{\partial t} + \frac{\partial R(a,t)}{\partial a} =&  \gamma_B(a,t) P_{BR}(a) \sum_i B_i(a,t) - \gamma_R(a,t) R(a,t)\\ 
+\frac{\partial R(a,t)}{\partial t} + \frac{\partial R(a,t)}{\partial a} =&  \gamma_B(a,t) P_{BR}(a) \sum_i B_i(a,t) - \gamma_R(a,t) R(a,t)\\ &\\
 %
 \frac{\partial L_1(a,t)}{\partial t} + \frac{\partial L_1(a,t)}{\partial a} =& \gamma_R(a,t) P_{RL}(a) R(a,t) + 
 \gamma_O(a,t) P_{OL}(a) \sum_i O_i(a,t)\\& - \gamma_L(a,t) L_1(a,t)
-\\ 
+\\ &\\
 %
 \frac{\partial L_i(a,t)}{\partial t} + \frac{\partial L_i(a,t)}{\partial a} =& \gamma_L(a,t) P_{LL}(a) L_{i-1} (a,t) - \gamma_L(a,t) L_i(a,t)
-\\ 
+\\ &\\
 %
 \frac{\partial O_1(a,t)}{\partial t} + \frac{\partial O_1(a,t)}{\partial a} =& \gamma_L(a,t) P_{LO}(a) \sum_i L_i(a,t) 
 + \gamma_R(a,t) P_{RO}(a) R(a,t) \\&
 - \gamma_O(a,t) O_1(a,t)
-\\ 
+\\ &\\
 %
 \frac{\partial O_i(a,t)}{\partial t} + \frac{\partial O_i(a,t)}{\partial a} =& \gamma_O(a,t) P_{OO}(a) O_{i-1} (a,t)   - \gamma_O(a,t) O_i(a,t)
 \\ 
 %
 \end{array}\end{equation}
 
-It is a nuisance to deal with an infinite set of equations, but if the state transitions are Markovian, then a change of variables to lump the even$^{th}$ and odd$^{th}$ states together: $x_o = x_1 + x_3 + x_5 + ...$ and $x_e = x_2 + x_4 + x_6 + ...$, and $x = x_o + x_e$:  
+It is a nuisance to deal with an infinite set of equations, but if the state transitions are Markovian, then a change of variables to lump the the $n^{th}$ states together: $x = \sum_i x_i$. <John's cool proof>:  This means we can rewrite the infinite system of equations as a simpler set:
 %
 \begin{equation}\begin{array}{rl}
 F_o(0,t) =& \Lambda(t) \\ 
 %
-\frac{\partial F_o(a,t)}{\partial t} + \frac{\partial F_o(a,t)}{\partial a} =& 
+&\\
+\frac{\partial F(a,t)}{\partial t} + \frac{\partial F(a,t)}{\partial a} =& 
 \gamma_O(a,t) P_{OF}(a) O(a,t) 
 + \gamma_B(a,t) P_{BF}(a) B(a,t) \\&
  + \gamma_R(a,t) P_{RF}(a) R(a,t)
 + \gamma_F(a,t) P_{FF}(a) F_e(a,t) \\ &
-- \gamma_F(a,t) F_o(a,t) \\ 
-%
-\frac{\partial F_e(a,t)}{\partial t} + \frac{\partial F_e(a,t)}{\partial a} =&  \gamma_F(a,t) P_{FF}(a) F_o (a,t) - \gamma_F(a,t) F_e(a,t) \\ 
+- \gamma_F(a,t) \left( 1-P_{FF}(a) \right) F(a,t) \\ 
 %
 %
-\frac{\partial B_o(a,t)}{\partial t} + \frac{\partial B_o(a,t)}{\partial a} =&  \gamma_O(a,t) P_{OB}(a) O(a,t) + \gamma_F(a,t) P_{FB}(a) F(a,t) \\ & 
+&\\
+\frac{\partial B(a,t)}{\partial t} + \frac{\partial B_o(a,t)}{\partial a} =&  \gamma_O(a,t) P_{OB}(a) O(a,t) + \gamma_F(a,t) P_{FB}(a) F(a,t) \\ & 
 + \gamma_R(a,t) P_{RB}(a) R(a,t) 
 + \gamma_B(a,t) P_{BB}(a) B_e(a,t)\\ & 
-- \gamma_B(a,t) B_o(a,t) \\ 
+- \gamma_B(a,t) \left( 1-P_{BB}(a) \right) B(a,t) \\ 
 %
-\frac{\partial B_e(a,t)}{\partial t} + \frac{\partial B_e(a,t)}{\partial a} =& \gamma_B(a,t) P_{BB}(a) B_o(a,t) -
-\gamma_B(a,t) B_e(a,t) 
-\\
-%
+&\\
 \frac{\partial R(a,t)}{\partial t} + \frac{\partial R(a,t)}{\partial a} =&  \gamma_B(a,t) P_{BR}(a) B(a,t) - \gamma_R(a,t) R(a,t)\\ 
 %
-\frac{\partial L_o(a,t)}{\partial t} + \frac{\partial L_o(a,t)}{\partial a} =& \gamma_R(a,t) P_{RL}(a) R(a,t) + 
+&\\
+\frac{\partial L(a,t)}{\partial t} + \frac{\partial L(a,t)}{\partial a} =& \gamma_R(a,t) P_{RL}(a) R(a,t) + 
 \gamma_O(a,t) P_{OL}(a) O(a,t) \\&
 + \gamma_L(a,t)  P_{LL}(a) L_e(a,t)
-- \gamma_L(a,t) L_o(a,t)
+- \gamma_L(a,t) \left( 1-P_{LL}(a) \right)  L(a,t)
 \\ 
 %
-\frac{\partial L_e(a,t)}{\partial t} + \frac{\partial L_e(a,t)}{\partial a} =& \gamma_L(a,t) P_{LL}(a) L_o (a,t) - \gamma_L(a,t) L_e(a,t)
-\\ 
-%
-\frac{\partial O_o(a,t)}{\partial t} + \frac{\partial O_o(a,t)}{\partial a} =& \gamma_L(a,t) P_{LO}(a) L(a,t) 
+&\\
+\frac{\partial O(a,t)}{\partial t} + \frac{\partial O(a,t)}{\partial a} =& \gamma_L(a,t) P_{LO}(a) L(a,t) 
 + \gamma_R(a,t) P_{RO}(a) R(a,t)  
-\\& 
+\\&
 + \gamma_O(a,t) P_{OO}(a) O_e(a,t)
-- \gamma_O(a,t) O_o(a,t)
-\\ 
-%
-\frac{\partial O_e(a,t)}{\partial t} + \frac{\partial O_e(a,t)}{\partial a} =& \gamma_O(a,t) P_{OO}(a) O_o (a,t) - \gamma_O(a,t) O_e(a,t)
-\\ 
+- \gamma_O(a,t) \left( 1-P_{OO}(a) \right) O_o(a,t)
+
 %
 \end{array}\end{equation}
 
