--- a/MASH-dev/DavidSmith/MBITESde-Supplement/MBITESde-Supplement.tex
+++ b/MASH-dev/DavidSmith/MBITESde-Supplement/MBITESde-Supplement.tex
@@ -54,7 +54,15 @@ F_1(0,t)=& \Lambda(t) \\ &\\
 %
 \end{array}\end{equation}
 
-It is a nuisance to deal with an infinite set of equations, but if the state transitions are Markovian, then a change of variables to lump the the $n^{th}$ states together: $x = \sum_i x_i$. <John's cool proof>:  This means we can rewrite the infinite system of equations as a simpler set:
+It is a nuisance to deal with an infinite set of equations, but
+if the state transitions are Markovian, then a change of
+variables to lump the the $n^{th}$ states together: $x = \sum_i
+x_i$. <John's cool proof>.  
+
+After rescaling, the leaving times from $\gamma_X(a,t)
+\left(1-P_{XX}\left(a,t\right)\right).$ 
+
+This means we can rewrite the infinite system of equations as a simpler set:
 %
 \begin{equation}\begin{array}{rl}
 F_o(0,t) =& \Lambda(t) \\ 
